@@ -1,3 +1,8 @@
+2010-10-22  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/45720
+	* gcc.dg/torture/pr45720.c: New testcase.
+
 2010-10-22  Ira Rosen  <irar@il.ibm.com>
 
 	PR tree-optimization/46126
